--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -25,7 +25,8 @@
     "@nestjs/platform-express": "^10.3.0",
     "graphql": "^16.8.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "tslib": "^2.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
