--- a/apps/web-portal/package.json
+++ b/apps/web-portal/package.json
@@ -32,6 +32,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.4.0"
+    "typescript": "^5.4.0",
+    "tslib": "^2.6.0"
   }
 }
