--- a/apps/web-portal/.env.local.example
+++ b/apps/web-portal/.env.local.example
@@ -1,4 +1,7 @@
-NEXT_RUNTIME=nodejs
-NEXT_PUBLIC_APP_NAME=KILIL University
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=devsecret
+KEYCLOAK_ISSUER_URL=http://localhost:8080/realms/et-univ
+KEYCLOAK_WEB_CLIENT_ID=web-portal
+KEYCLOAK_WEB_CLIENT_SECRET=CHANGE_ME_IN_REAL_KEYCLOAK
 NEXT_PUBLIC_BFF_URL=http://localhost:4000/graphql
 FRONTEND_URL=http://localhost:3000
