--- a/apps/web-portal/package.json
+++ b/apps/web-portal/package.json
@@ -13,12 +13,14 @@
     "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
-    "next": "14.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next-intl": "^3.0.0",
+    "@kilil/ethiopian-calendar": "workspace:*",
     "@kilil/i18n": "workspace:*",
-    "@kilil/ethiopian-calendar": "workspace:*"
+    "@types/node": "^24.6.1",
+    "next": "14.2.0",
+    "next-auth": "^4.24.11",
+    "next-intl": "^3.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.5",
@@ -33,7 +35,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.4.0",
-    "tslib": "^2.6.0"
+    "tslib": "^2.6.0",
+    "typescript": "^5.4.0"
   }
 }
