--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -36,6 +36,24 @@ services:
     networks:
       - kilil-network
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0
+    command: start-dev --import-realm
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./infra/keycloak/realm-export.json:/opt/keycloak/data/import/realm-export.json:ro
+    healthcheck:
+      test: ["CMD", "curl", "-fsS", "http://localhost:8080/realms/et-univ/.well-known/openid-configuration"]
+      interval: 10s
+      timeout: 5s
+      retries: 12
+    networks:
+      - kilil-network
+
 volumes:
   postgres_data:
   redis_data:
