--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@kilil/i18n": ["packages/i18n/src/index.ts"],
-      "@kilil/ethiopian-calendar": ["packages/ethiopian-calendar/src/index.ts"]
+      "@kilil/ethiopian-calendar": ["packages/ethiopian-calendar/src/index.ts"],
+      "@kilil/shared-auth": ["packages/shared-auth/src/index.ts"]
     },
     "allowSyntheticDefaultImports": true,
     "strict": false,
