--- a/services/notifications-service/package.json
+++ b/services/notifications-service/package.json
@@ -7,7 +7,7 @@
     "dev": "nest start --watch",
     "start": "nest start",
     "start:prod": "node dist/main",
-    "lint": "eslint 'src/**/*.ts' --fix",
+    "lint": "eslint src/**/*.ts --fix",
     "typecheck": "tsc --noEmit",
     "test": "jest",
     "test:ci": "jest --ci --coverage"
