--- a/apps/web-portal/tsconfig.json
+++ b/apps/web-portal/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig.json",
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "preserve",
@@ -17,7 +16,11 @@
         "name": "next"
       }
     ],
-    "types": ["jest", "node", "@testing-library/jest-dom", "./types/jest-axe"]
+    "types": ["jest", "node", "@testing-library/jest-dom", "./types/jest-axe"],
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["components/*"]
+    }
   },
   "include": [
     "next-env.d.ts",
