--- a/services/billing-service/package.json
+++ b/services/billing-service/package.json
@@ -10,20 +10,23 @@
     "lint": "eslint src/**/*.ts --fix",
     "typecheck": "tsc --noEmit",
     "test": "jest",
-    "test:ci": "jest --ci --coverage"
+    "test:ci": "jest --ci --coverage",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev --name init"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
-    "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.3.0",
+    "@prisma/client": "^5.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
-    "@nestjs/schematics": "^11.0.7",
-    "@nestjs/testing": "^11.1.6",
+    "@nestjs/schematics": "^10.1.0",
+    "@nestjs/testing": "^10.3.0",
     "@types/express": "^4.17.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.11.0",
@@ -35,6 +38,7 @@
     "eslint-plugin-prettier": "^5.1.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.0",
+    "prisma": "^5.0.0",
     "source-map-support": "^0.5.0",
     "supertest": "^6.3.0",
     "ts-jest": "^29.1.0",
