--- a/services/billing-service/package.json
+++ b/services/billing-service/package.json
@@ -21,7 +21,8 @@
     "@nestjs/swagger": "^7.3.0",
     "@prisma/client": "^5.0.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "tslib": "^2.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
