--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "compileOnSave": false,
   "compilerOptions": {
     "rootDir": ".",
@@ -17,7 +18,8 @@
     "paths": {
       "@kilil/i18n": ["packages/i18n/src/index.ts"],
       "@kilil/ethiopian-calendar": ["packages/ethiopian-calendar/src/index.ts"],
-      "@kilil/shared-auth": ["packages/shared-auth/src/index.ts"]
+      "@kilil/shared-auth": ["packages/shared-auth/src/index.ts"],
+      "@kilil/billing-service/*": ["services/billing-service/src/*"]
     },
     "allowSyntheticDefaultImports": true,
     "strict": false,
