docs: Complete Phase 1 and Phase 2 documentation updates
- Add PHASE1_SUMMARY.md with comprehensive identity & authentication implementation details
- Add PHASE2_SUMMARY.md with complete payments E2E workflow documentation
- Update BUILDLOG.md with detailed Phase 1 and Phase 2 implementation logs
- Update INDEX.md to include Phase 1 summary in documentation structure
- Update STATUS_REPORT.md with current project status
- Fix schema validation issues by removing  references from package.json files
- Add payments reconciliation specification
- Complete all documentation for payments adapter service implementation

--- a/apps/bff/.env.example
+++ b/apps/bff/.env.example
@@ -4,3 +4,5 @@ KEYCLOAK_ISSUER_URL=http://localhost:8080/realms/et-univ
 KEYCLOAK_REALM=et-univ
 KEYCLOAK_CLIENT_ID=bff
 KEYCLOAK_AUDIENCE=bff
+BILLING_BASE=http://localhost:4001
+PAYMENTS_BASE=http://localhost:4002
