--- a/apps/web-portal/.env.local.example
+++ b/apps/web-portal/.env.local.example
@@ -5,3 +5,4 @@ KEYCLOAK_WEB_CLIENT_ID=web-portal
 KEYCLOAK_WEB_CLIENT_SECRET=CHANGE_ME_IN_REAL_KEYCLOAK
 NEXT_PUBLIC_BFF_URL=http://localhost:4000/graphql
 FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_PAYMENTS_BASE=http://localhost:4002
