--- a/apps/bff/package.json
+++ b/apps/bff/package.json
@@ -1,5 +1,4 @@
 {
-  "$schema": "https://json.schemastore.org/package",
   "name": "@kilil/bff",
   "version": "0.1.0",
   "private": true,
@@ -20,14 +19,16 @@
   "dependencies": {
     "@apollo/server": "^4.10.0",
     "@nestjs/apollo": "^12.1.0",
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/passport": "^10.0.0",
     "@nestjs/platform-express": "^11.1.6",
+    "axios": "^1.12.2",
     "graphql": "^16.8.0",
-    "jwks-rsa": "^3.1.0",
     "jsonwebtoken": "^9.0.0",
+    "jwks-rsa": "^3.1.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.2.0",
@@ -38,6 +39,7 @@
     "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^11.0.7",
     "@nestjs/testing": "^11.1.6",
+    "@types/axios": "^0.14.4",
     "@types/express": "^4.17.0",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.0",
