--- a/services/payments-adapter-service/package.json
+++ b/services/payments-adapter-service/package.json
@@ -13,12 +13,14 @@
     "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^11.1.6",
     "@nestjs/swagger": "^7.3.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "tslib": "^2.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
@@ -44,6 +46,17 @@
     "typescript": "^5.4.0"
   },
   "jest": {
+    "moduleFileExtensions": ["js", "json", "ts"],
+    "rootDir": "src",
+    "testRegex": ".*\\.test\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node",
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/dist/"
