feat(enrollment): catalog + registration MVP with validation and idempotent confirm; web page and docs

--- a/apps/bff/.env.example
+++ b/apps/bff/.env.example
@@ -6,3 +6,4 @@ KEYCLOAK_CLIENT_ID=bff
 KEYCLOAK_AUDIENCE=bff
 BILLING_BASE=http://localhost:4001
 PAYMENTS_BASE=http://localhost:4002
+ENROLLMENT_BASE=http://localhost:4003
