--- a/services/enrollment-service/package.json
+++ b/services/enrollment-service/package.json
@@ -10,7 +10,12 @@
     "lint": "eslint src/**/*.ts --fix",
     "typecheck": "tsc --noEmit",
     "test": "jest",
-    "test:ci": "jest --ci --coverage"
+    "test:ci": "jest --ci --coverage",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:seed": "prisma db seed",
+    "prisma:studio": "prisma studio",
+    "test:endpoints": "powershell -ExecutionPolicy Bypass -File scripts/test-endpoints.ps1"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
@@ -24,6 +29,7 @@
     "@nestjs/cli": "^10.3.0",
     "@nestjs/schematics": "^11.0.7",
     "@nestjs/testing": "^11.1.6",
+    "@prisma/client": "^5.22.0",
     "@types/express": "^4.17.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.11.0",
@@ -35,18 +41,17 @@
     "eslint-plugin-prettier": "^5.1.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.0",
+    "prisma": "^5.22.0",
     "source-map-support": "^0.5.0",
     "supertest": "^6.3.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.5.0",
     "ts-node": "^10.9.0",
     "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.6.0",
     "typescript": "^5.4.0"
   },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/dist/"
-    ]
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
