--- a/apps/web-portal/package.json
+++ b/apps/web-portal/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@kilil/ethiopian-calendar": "workspace:*",
     "@kilil/i18n": "workspace:*",
+    "@tanstack/react-query": "^5.90.2",
     "@types/node": "^24.6.1",
     "next": "14.2.32",
     "next-auth": "^4.24.11",
